--- a/9.css
+++ b/9.css
@@ -58,9 +58,9 @@ background-position: bottom;
 	margin: 15px 0 5px;
 }
 @media screen and (max-width:768px){
-	.main {
+	main {
 	    width: 100%
-}
+    }
 	.step-box {
 		float:none;
 		width: 90%;
